feat: implement core lead management services, assignment workflows, and data scope validation modules